test: ThemeDao fake 객체 findALl 메서드 추가